<resources>
    <string name="app_name">Congregation Report</string>
    <string name="app_version">1</string>
    <string name="app_key">118059408433579405831725771763</string>
    <string name="screen_report">Relatório</string>
    <string name="screen_reports">Relatórios</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">Usuários</string>
    <string name="menu_group">Grupos</string>
    <string name="menu_publishers">Publicadores</string>
    <string name="usuario">Usuário</string>
    <string name="group">Grupo</string>
    <string name="password" translatable="false">Senha</string>
    <string name="url_planilha">URL da Planilha</string>
    <string name="login">Login</string>
    <string name="conectar">Conectar</string>
    <string name="btn_report_service">Relatórios de Serviço</string>
    <string name="msg_conectar_url_vazia">O campo URL não pode estar vazio!</string>
    <string name="msg_conectar_erro">Erro ao baixar os dados!</string>
    <string name="msg_login__erro">Error na conexão com o aplicativo, entre em contato com o administrador!</string>
    <string name="msg_send_data_erro">Erro ao enviar os dados!</string>
    <string name="msg_send_data_row_erro">Os dados que você está tentando atualizar não existem no servidor. Contate o administrador!</string>
    <string name="msg_login_usuario_vazio">Erro no envio de dados!</string>
    <string name="msg_login_senha_vazia">O campo de senha é obrigatório</string>
    <string name="msg_login_password_invalido">A senha não é válida!</string>
    <string name="msg_login_user_not_found">O nome de usuário não existe!</string>
    <string name="publications">Publicações</string>
    <string name="videos">Vídeos</string>
    <string name="horas">Horas</string>
    <string name="revisited">Revisitas</string>
    <string name="cursos_biblicos">Estudos</string>
    <string name="credit">Crédito</string>
    <string name="notes">Notas</string>
    <string name="save">Adicionar</string>
    <string name="logout">Reiniciar sessão</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_yes">Sim</string>
    <string name="label_no">Não</string>
    <string name="ative_internet">Ative sua Internet para continuar</string>
    <string name="title_save_data_login">Dados de Login</string>
    <string name="msg_save_data_login">Quer salvar seus dados de login?</string>
    <string name="msg_cannot_resubimit_report">"Você não pode reenviar seu relatório do mês de "</string>
    <string name="msg_no_internet">Para se conectar ao aplicativo, você precisa estar conectado à Internet!</string>
    <string name="msg_no_internet_report">Para adicionar um relatório, você precisa estar conectado à Internet!</string>
    <string name="msg_cannot_send_on_this_date">"Você não pode enviar seu relatório nesta data. O relatório só pode ser enviado do primeiro dia ao dia 10 de cada mês. Se precisar enviar seu relatório do mês de "</string>
    <string name="msg_cannot_send_on_this_date2">, entre em contato com o administrador ou aguarde o próximo mês.</string>
    <string name="msg_no_internet_assistance">Para adicionar uma assistência, você precisa estar conectado à Internet!</string>
    <string name="msg_is_information_correct">A informação está correta?</string>
    <string name="msg_is_preaching_fifteen_min_less">Você realmente pregou 15 minutos pelo menos neste mês?</string>
    <string name="msg_logout">Você realmente deseja sair da aplicação?</string>
    <string name="msg_re_login">Tem certeza de que deseja sair e fazer login novamente?</string>
    <string name="msg_change_user">Tem certeza de que deseja fazer logout e login com um novo usuário?</string>
    <string name="msg_function_not_available">O recurso ainda não está disponível!</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="servant">Servo Ministerial</string>
    <string name="elder">Ancião</string>
    <string name="report_publications">Publicações</string>
    <string name="report_hours">Horas</string>
    <string name="report_videos">Vídeos</string>
    <string name="report_revisited">Revisitas</string>
    <string name="report_bible_courses">Estudos</string>
    <string name="report_credit">Crédito</string>
    <string name="report_notes">Notas</string>
    <string name="studies">Estudos</string>
    <string name="msg_no_report">Relatório ainda não adicionado</string>
    <string name="msg_no_assistance">Assistência ainda não adicionada</string>
    <string name="total">TOTAL</string>
    <string name="no_data">Não há registro</string>
    <string name="msg_attention_report">O relatório só pode ser enviado após o primeiro dia até o décimo dia de cada mês.</string>
    <string name="your_service">Seu serviço por ano</string>
    <string name="your_report">"Seu Relatório "</string>
    <string name="menu_item_add">Adicionar</string>
    <string name="auxiliary_pioneer">Pioneiro Auxiliar?</string>
    <string name="label_auxiliary_pioneer">Pioneiro Auxiliar</string>
    <string name="auxiliary_pioneers">Pioneiros Auxiliares</string>
    <string name="msg_creating">Salvando dados</string>
    <string name="msg_updating">Atualizando dados</string>
    <string name="msg_deleting">Deletando dados</string>
    <string name="label_hour_requeride">O campo hora é obrigatório</string>
    <string name="label_date_requeride">O campo data é obrigatório</string>
    <string name="label_date_error_future">Não pode selecionar uma data futura</string>
    <string name="label_amount_requeride">O campo quantidade é obrigatório</string>
    <string name="label_amount_less_than">Não pode ser menor que o número de pessoas surdas.</string>
    <string name="january">JANEIRO</string>
    <string name="february">FEVEREIRO</string>
    <string name="march">MARÇO</string>
    <string name="april">ABRIL</string>
    <string name="may">MAIO</string>
    <string name="june">JUNHO</string>
    <string name="july">JULHO</string>
    <string name="august">AGOSTO</string>
    <string name="september">SETEMBRO</string>
    <string name="october">OUTUBRO</string>
    <string name="november">NOVEMBRO</string>
    <string name="december">DEZEMBRO</string>
    <string name="label_ok">Ok</string>
    <string name="regular_pioneer">Pioneiro Regular</string>
    <string name="regular_pioneer_w">Pioneira Regular</string>
    <string name="special_pioneer">Pioneiro Especial</string>
    <string name="special_pioneer_">Pioneira Especial</string>
    <string name="missionary">Missionário</string>
    <string name="missionary_w">Missionária</string>
    <string name="publisher">Publicador</string>
    <string name="publisher_w">Publicadora</string>
    <string name="label_not_send_report">Quem não enviou o relatório?</string>
    <string name="publishers">Publicadores</string>
    <string name="btn_meeting_assistance">Assistência</string>
    <string name="screen_meeting_assistances">Assistência das Reuniões</string>
    <string name="screen_meeting_assistance">Assistência</string>
    <string name="your_assistance">Assistência a reuniões por ano</string>
    <string name="date">Data</string>
    <string name="amount_deaf">Quantidade SURDOS</string>
    <string name="amount_total">Total</string>
    <string name="deaf">Surdos</string>
    <string name="deaf_o">SURDOS</string>
    <string name="type">Tipo</string>
    <string name="average_a">M</string>
    <string name="average_for">"Média de "</string>
    <string name="your_total">Totais anuais</string>
    <string name="thirty_hours">30 HORAS</string>
    <string name="fifty_hours">50 HORAS</string>
    <string name="preaching_fifteen_min_less">15 minutos ou menos</string>
    <string name="you_preaching_fifteen_min_less">Peregou 15 minutos ou menos neste mês</string>
    <string name="auxiliary_pioneer_in">"Pioneiro auxiliar de "</string>
    <string name="this_month">" neste mês"</string>
    <string name="type_middle_week_label">Meio de Semana</string>
    <string name="type_weekend_label">Final de Semana</string>
    <string name="alredy_assistance_count">Já existe uma contagem para ese dia, qualquer dúvida entre em contato com o responsável.</string>
    <string name="label_abr_week">S-</string>
    <string name="hours">Horas</string>
    <string name="number_reports">Quantidade de Relatórios</string>
    <string name="number_reports_auxiliary">Quantidade de Pioneiros Auxiliares</string>
    <string name="number_reports_regular">Quantidade de Pioneiros Regulares</string>
    <string name="number_reports_special">Quantidade de Pioneiros Especiais</string>
    <string name="number_reports_deafs">Quantidade de Surdos</string>
    <string name="number_reports_publishers">Quantidade de Publicadores</string>
    <string name="publications_print">Publicações (impresas e eletrônicas)</string>
    <string name="showed_videos">Vídeos</string>
    <string name="label_totals">Totais</string>
    <string name="label_total">Total</string>
    <string name="label_regular_pioneer">Pioneiros Regulares</string>
    <string name="label_active_publishers">Publicadores ativos</string>
    <string name="label_assistance_average">Participação média em reuniões de fim de semana</string>
    <string name="label_no_auxiliary">Não há pioneiros auxiliares neste mês</string>
    <string name="report_s21_title">S-21 Dos Publicadores da Congregação</string>
    <string name="label_s21_title">REGISTRO DE PUBLICADOR DE LA CONGREGACIÓN</string>
    <string name="label_name_s21">Nome:</string>
    <string name="label_date_s21">Data de nascimento:</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>
    <string name="label_batism_s21">Data de batismo:</string>
    <string name="other_sheep">Outras ovelhas</string>
    <string name="anointed">Ungido</string>
    <string name="label_year_service_s21">"Ano de serviço "</string>
    <string name="label_publications_service_s21">Publicações</string>
    <string name="label_videos_service_s21">Vídeos</string>
    <string name="label_revisited_service_s21">Revisitas</string>
    <string name="label_courses_service_s21">Estudos</string>
    <string name="label_notes_service_s21">Notas</string>
    <string name="label_hour_service_s21">Horas</string>
    <string name="label_footer_service_s21">S-21-P      12/18</string>
    <string name="label_average">Média</string>
    <string name="msg_loading_data">Carregando dados</string>
    <string name="msg_generating_data_printing">Gerando dados para impressão</string>
    <string name="msg_loading_data_error">Erro ao carregar os dados, entre em contato com o administrador!</string>
    <string name="msg_generating_data_print_error">Erro ao gerar dados para imprimir</string>
    <string name="label_all">Todos</string>
    <string name="label_betel">Betel</string>
    <string name="label_s88">S-88</string>
    <string name="label_s21">S-21</string>
    <string name="label_total_month">Totais mensais</string>
    <string name="label_filter">Filtro</string>
    <string name="label_select_publisher">Selecione um Publicador</string>
    <string name="label_deaf">Surdos</string>
    <string name="label_group_publishers">Publicadores (surdos e ouvintes)</string>
    <string name="label_group_deaf">Publicadores surdos</string>
    <string name="label_group_regular_auxiliary">Pioneiros auxiliares</string>
    <string name="deafs">Surdos</string>
    <string name="label_change_password">Para sua segurança, recomendamos que você altere sua senha.</string>
    <string name="label_title_change_password">Nova Senha</string>
    <string name="label_save">Salvar</string>
    <string name="label_new_password">Nova senha</string>
    <string name="label_repeat_new_password">Repita a nova senha</string>
    <string name="summary_congregation">Resumo da Congregação</string>
</resources>