<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/nav_publisher"
            android:icon="@drawable/ic_publisher"
            android:title="@string/menu_publishers" />
    </group>
</menu>