<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.congregationreport.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user"
        android:name="br.com.congregationreport.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_simple" />

    <fragment
        android:id="@+id/nav_group"
        android:name="br.com.congregationreport.ui.group.GroupFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_publishers"
        android:name="br.com.congregationreport.ui.publisher.PublisherFragment"
        android:label="@string/menu_publishers"
        tools:layout="@layout/fragment_slideshow" />
</navigation>